bk_ida/gccida/g0/insert_save
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/caller-save.c:1168:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *save_mode) 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/caller-save.c:1250:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[save_mode[regno]] == MODE_COMPLEX_INT || mode_class_0[save_mode[regno]] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/caller-save.c:1250:65: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[save_mode[regno]] == MODE_COMPLEX_INT || mode_class_0[save_mode[regno]] == MODE_COMPLEX_FLOAT ) 
                                                                ^~~~~~~~~~~~
                                                                mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/caller-save.c:1261:22: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_REG( ( machine_mode)*( ( unsigned __int8 *)mem + 2), regno); 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/insert_save/src/obj/caller-save.o] Error 1
